--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,10 @@
   src: url('../fonts/Velvelyne-Regular.otf') format('opentype');
 }
 
+body {
+  background-color: rgb(242, 240, 239);
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -102,7 +106,19 @@ html, body {
 }
 
 #about-section {
-  font-size: 2rem;
+  padding-top: 2%;
+  font-size: 1.5rem;
+
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #4A4A4A;
+    color:rgb(242, 240, 239);
+  }
+  #about-section {
+    color: white;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -116,12 +132,22 @@ html, body {
     #about-section {
     font-size: 1.5rem;
     padding-left: 2%;
+    padding-top: 4%;
+
     }
 
     .center-title {
       font-size: 1.2rem;
       margin-top: 100%;
     }
-
 }
+
+@media screen and (max-width: 780px) {
+  #about-section {
+    padding-top: 4%;
+  }
+}
+
+
+
 
